# sklearnlite

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
sklearnlite/: example.py
sklearnlite.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sklearnlite/cluster/: _kmeans.py
src/smart_ml/base/: base_estimator.py
