[metadata]
name = smart-ml
version = 0.1.0
author = Ishi
author_email = ishishiv3012@gmail.com
description = A Python library for machine learning replicating scikit-learn functionality.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ishi3012/smart-ml
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest >= 7.2.0
    sphinx >= 6.0.0

[options.entry_points]
console_scripts =
    smart_ml = smart_ml.cli:main
